[gd_scene load_steps=6 format=3 uid="uid://cfqrlcjvh1ro7"]

[ext_resource type="Script" uid="uid://dwc301tq84aut" path="res://UI/Components/YesNoMessage/yes_no_message.gd" id="1_3brog"]
[ext_resource type="Theme" uid="uid://bybm5iuhmxeoj" path="res://UI/main_theme.tres" id="1_xwfyf"]
[ext_resource type="LabelSettings" uid="uid://w8lv2e054n28" path="res://UI/LabelSettings/big_bold_label_settings.tres" id="3_s60pc"]
[ext_resource type="Script" uid="uid://c6fo8fmkrj3al" path="res://UI/Components/button_anim_component.gd" id="4_wd8ye"]
[ext_resource type="Script" uid="uid://m20blgxgerfk" path="res://UI/Components/button_focus_component.gd" id="5_vj2ep"]

[node name="YesNoMessage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xwfyf")
script = ExtResource("1_3brog")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -108.0
offset_right = 141.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 45
alignment = 1

[node name="MessageLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Are you sure?"
label_settings = ExtResource("3_s60pc")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="YesBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Yes"

[node name="ButtonAnimComponent" type="Node" parent="PanelContainer/VBoxContainer/HBoxContainer/YesBtn"]
script = ExtResource("4_wd8ye")
time = 0.2

[node name="ButtonFocusComponent" type="Node" parent="PanelContainer/VBoxContainer/HBoxContainer/YesBtn"]
script = ExtResource("5_vj2ep")

[node name="NoBtn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "No"

[node name="ButtonAnimComponent" type="Node" parent="PanelContainer/VBoxContainer/HBoxContainer/NoBtn"]
script = ExtResource("4_wd8ye")
time = 0.2

[node name="ButtonFocusComponent" type="Node" parent="PanelContainer/VBoxContainer/HBoxContainer/NoBtn"]
script = ExtResource("5_vj2ep")

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/YesBtn" to="." method="_on_yes_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/NoBtn" to="." method="_on_no_btn_pressed"]
